# AIQRating

./: AIQRating.cabal  README.md  stack.yaml
app/: Main.hs
src/: Lexer.hs  Processer.hs  Writer.hs
test/: Spec.hs
